# awards

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: tests.yml
accounts/: models.py  test_models.py
accounts/migrations/: 0001_initial.py
awards/: asgi.py  settings.py  urls.py  wsgi.py
awards/settings/: base.py  ci.py  dev.py  prod.py
awards/templates/: base.html
homepage/: apps.py  test_views.py
homepage/templates/homepage/: index.html
tests/: test_awards.py
