[tool.poetry]
name = "awards"
version = "0.1.0"
description = "An application to manage financial aid and scholarship applications and awards."
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/PyGotham/awards"

[tool.poetry.dependencies]
Django = "^4.2"
psycopg2 = "^2.9.10"
python = "^3.11"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
black = "^25.1"
bpython = "^0.25"
django-debug-toolbar = "^5.0.1"
django-stubs = "^4.2.4"
flake8 = "^7.1.2"
flake8-bugbear = "^24.12.12"
ipdb = "^0.13.13"
ipython = "^9.0.1"
isort = "^6.0.0"
mypy = "^1.15"
pep8-naming = "^0.14.1"
pre-commit = "^4.1.0"
pudb = "^2024.1"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
pywatchman = "^2.0.0"
tox = "^3.28.0"
tox-poetry = "^0.5.0"

[tool.django-stubs]
django_settings_module = "awards.settings"

[tool.isort]
add_imports = "from __future__ import annotations"
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
addopts = "--strict-markers"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
